# xmodem-1k

./: .gitignore  CMakeLists.txt  xmodem.c  xmodem.h
include/: xmodem.h
src/: CMakeLists.txt  crc16.c  xmodem.c  xmodem.h
tests/: CMakeLists.txt
tests/main_tests/: CMakeLists.txt  xmodemTests.cpp
tests/main_tests/warnings/: nonnull  nullability-completeness  pop  push
